[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/menus/menuInGame/fundoTelaMaior.png" type="Texture" id=1]
[ext_resource path="res://sprites/personagem/grupo/rosto-ze.png" type="Texture" id=2]
[ext_resource path="res://fontes/FontesSalvas/fonteMenuInGame.tres" type="DynamicFont" id=3]
[ext_resource path="res://script/menus/MenuInGameStatus.gd" type="Script" id=4]
[ext_resource path="res://sprites/ferramentas/setaAzul.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 92.628, 94.648 )

[node name="MenuInGameStatus" type="Node2D"]
script = ExtResource( 4 )

[node name="fundo" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="imagemPersonagem" type="Sprite" parent="."]
position = Vector2( -200, -160 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="cursor" type="Sprite" parent="."]
position = Vector2( -275, 32 )
rotation = 4.71239
scale = Vector2( 0.15, 0.2 )
texture = ExtResource( 5 )

[node name="Nome" type="Label" parent="."]
margin_left = -134.0
margin_top = -220.0
margin_right = 56.0
margin_bottom = -196.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Nome Personagem"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Esferas" type="Label" parent="."]
margin_left = -245.0
margin_top = -95.0
margin_right = -95.0
margin_bottom = -71.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Esferas: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pontos" type="Label" parent="."]
margin_left = -255.0
margin_top = -10.0
margin_right = -105.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Pts: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Experiencia" type="Label" parent="."]
margin_left = 57.0
margin_top = -248.0
margin_right = 256.0
margin_bottom = -224.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Exp: 99999 / 99999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lv" type="Label" parent="."]
margin_left = -134.0
margin_top = -190.0
margin_right = 65.0
margin_bottom = -166.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Lv: 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hp" type="Label" parent="."]
margin_left = -134.0
margin_top = -160.0
margin_right = 65.0
margin_bottom = -136.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "HP: 0/0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mp" type="Label" parent="."]
margin_left = -138.0
margin_top = -130.0
margin_right = 61.0
margin_bottom = -106.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "MP: 0/0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Forca" type="Label" parent="."]
margin_left = -250.0
margin_top = 20.0
margin_right = -105.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Força: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Destreza" type="Label" parent="."]
margin_left = -250.0
margin_top = 50.0
margin_right = -105.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Destreza: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Agilidade" type="Label" parent="."]
margin_left = -250.0
margin_top = 80.0
margin_right = -105.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Agilidade: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vitalidade" type="Label" parent="."]
margin_left = -250.0
margin_top = 110.0
margin_right = -98.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Vitalidade: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inteligencia" type="Label" parent="."]
margin_left = -250.0
margin_top = 140.0
margin_right = -85.0
margin_bottom = 164.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Inteligência: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vontade" type="Label" parent="."]
margin_left = -250.0
margin_top = 170.0
margin_right = -105.0
margin_bottom = 194.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Vontade: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ataque" type="Label" parent="."]
margin_left = 30.0
margin_top = -100.0
margin_right = 175.0
margin_bottom = -76.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Ataque: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Defesa" type="Label" parent="."]
margin_left = 30.0
margin_top = -70.0
margin_right = 175.0
margin_bottom = -46.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Defesa: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AtaqueMagico" type="Label" parent="."]
margin_left = 30.0
margin_top = -40.0
margin_right = 228.0
margin_bottom = -16.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Ataque Magico: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefesaMagica" type="Label" parent="."]
margin_left = 30.0
margin_top = -10.0
margin_right = 224.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Defesa Magica: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Acerto" type="Label" parent="."]
margin_left = 30.0
margin_top = 20.0
margin_right = 175.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Acerto: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Esquiva" type="Label" parent="."]
margin_left = 30.0
margin_top = 50.0
margin_right = 175.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Esquiva: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bloqueio" type="Label" parent="."]
margin_left = 30.0
margin_top = 80.0
margin_right = 175.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Bloquio: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcertoMagico" type="Label" parent="."]
margin_left = 30.0
margin_top = 110.0
margin_right = 224.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Acerto Magico: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EsquivaMagica" type="Label" parent="."]
margin_left = 30.0
margin_top = 140.0
margin_right = 235.0
margin_bottom = 164.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Esquiva Magica: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BloqueioMagico" type="Label" parent="."]
margin_left = 30.0
margin_top = 170.0
margin_right = 235.0
margin_bottom = 194.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Bloquio Magico: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="areaAtributos" type="Area2D" parent="."]
position = Vector2( -165, 110 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaAtributos"]
shape = SubResource( 1 )
